--- a/AirBNB_Full_Modelling.ipynb
+++ b/AirBNB_Full_Modelling.ipynb
@@ -30,9 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\edmun\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "c:\\Users\\edmun\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
+      "c:\\Users\\edmun\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.GK7GX5KEQ4F6UYO3P26ULGBQYHGQO7J4.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -67,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +544,7 @@
        "4           Redhill   4.458968  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +579,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1178,7 @@
        "4        0.0           0.0  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2793,7 +2804,7 @@
        "4                     0  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2811,7 +2822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2822,7 +2833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2832,7 +2843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2862,36 +2873,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 116,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # Let us identify the numerical features for scaling\n",
-    "# numerical_features = ['name_len', 'desc_len','mrtDisp','cityDisp','host_response_rate', 'host_acceptance_rate','latitude',\n",
-    "#        'longitude', 'availability_30', 'availability_60', 'availability_90','availability_365', 'accommodates','bedrooms', 'beds', 'bathroom_qty',\n",
-    "#        'number_of_reviews','reviews_per_month', 'review_scores_rating', 'review_scores_accuracy',\n",
-    "#        'review_scores_cleanliness', 'review_scores_checkin', 'review_scores_communication', 'review_scores_location',\n",
-    "#        'review_scores_value', 'calculated_host_listings_count', 'calculated_host_listings_count_entire_homes', 'calculated_host_listings_count_private_rooms']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Scale the numerical features\n",
-    "# scaler = StandardScaler()\n",
-    "\n",
-    "# # Fit the scaler to the training data\n",
-    "# scaler.fit(X_train[numerical_features])\n",
-    "\n",
-    "# # Transform the training data\n",
-    "# X_train[numerical_features] = scaler.transform(X_train[numerical_features])\n",
-    "\n",
-    "# # Transform the test data\n",
-    "# X_test[numerical_features] = scaler.transform(X_test[numerical_features])"
+    "As we will mainly be using decision tree algorithm which do not require feature scaling, we will not perform any feature scaling."
    ]
   },
   {
@@ -2925,7 +2910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2958,7 +2943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2987,16 +2972,14 @@
     "    'lgbm__colsample_bytree': [0.8, 0.9, 1.0],\n",
     "}\n",
     "\n",
-    "\n",
     "params_xgb = {\n",
-    "    'xgb__n_estimators': [100, 150, 200],\n",
+    "    'xgb__n_estimators': [50, 100, 200],\n",
     "    'xgb__max_depth': [3, 5, 7, 9],\n",
     "    'xgb__learning_rate': [0.1,0.2,0.3],\n",
     "    'xgb__gamma': [4,6,8,10],\n",
     "    'xgb__min_child_weight': [1,2,3],\n",
     "    'xgb__subsample': [0.3, 0.5, 0.8],\n",
     "    'xgb__colsample_bytree': [0.2, 0.5, 0.7],\n",
-    "    'xgb__colsample_bylevel': [0.2, 0.5, 0.7],\n",
     "    'xgb__alpha': [0, 0.1, 0.2]\n",
     "}"
    ]
@@ -3033,12 +3016,7 @@
     "    print(f\"Generalisation score: {round((train_score - test_score)*100/train_score,3)}%\")\n",
     "    print(f\"---------------------------------------------------------------\")\n",
     "    print(f\"Training RMSE: {round(sqrt(mean_squared_error((y_train), (y_train_pred))),4)}\")\n",
-    "    print(f\"Testing RMSE: {round(sqrt(mean_squared_error((y_test), (y_test_pred))),4)}\")\n",
-    "\n",
-    "\n",
-    "    # Pickle the model\n",
-    "    #model_file = './models/final' + prefix + '.sav'\n",
-    "    #pickle.dump(gs, open(model_file, 'wb'))"
+    "    print(f\"Testing RMSE: {round(sqrt(mean_squared_error((y_test), (y_test_pred))),4)}\")"
    ]
   },
   {
@@ -3050,7 +3028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3085,22 +3063,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Randomized Search CV\n",
-    "#run_model_rs(pipe_knn, params_knn, model_name = 'k-Nearest Neighbors Regressor', prefix = 'knn')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Grid Search CV\n",
-    "# run_model_gs(pipe_knn, params_knn, model_name = 'Random Forest Regressor', prefix = 'knn')"
+    "run_model_gs(pipe_knn, params_knn, model_name = 'Random Forest Regressor', prefix = 'knn')"
    ]
   },
   {
@@ -3112,22 +3080,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Randomized Search CV\n",
-    "#run_model_rs(pipe_rf, params_rf, model_name = 'Random Forest Regressor', prefix = 'rf')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Grid Search CV\n",
-    "#run_model_gs(pipe_rf, params_rf, model_name = 'Random Forest Regressor', prefix = 'rf')"
+    "run_model_gs(pipe_rf, params_rf, model_name = 'Random Forest Regressor', prefix = 'rf')"
    ]
   },
   {
@@ -3139,21 +3097,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Randomized Search CV\n",
-    "#run_model_rs(pipe_lgbm, params_lgbm, model_name = 'LightGBM Regressor', prefix = 'lgbm')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run_model_gs(pipe_lgbm, params_lgbm, model_name = 'LightGBM Regressor', prefix = 'lgbm')"
+    "run_model_gs(pipe_lgbm, params_lgbm, model_name = 'LightGBM Regressor', prefix = 'lgbm')"
    ]
   },
   {
@@ -3165,22 +3113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Randomized Search CV\n",
-    "#run_model_rs(pipe_xgb, params_xgb, model_name = 'Xtreme Gradient Boosting Regressor', prefix = 'xgb')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Grid Search CV\n",
-    "#run_model_gs(pipe_xgb, params_xgb, model_name = 'Xtreme Gradient Boosting Regressor', prefix = 'xgb')"
+    "run_model_gs(pipe_xgb, params_xgb, model_name = 'Xtreme Gradient Boosting Regressor', prefix = 'xgb')"
    ]
   },
   {
@@ -4714,7 +4652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -5233,7 +5171,7 @@
    "source": [
     "# We will plot the force plot for the first observation\n",
     "shap.initjs()\n",
-    "shap.plots.force(shap_values[0])"
+    "shap.plots.force(shap_values[0])\n"
    ]
   },
   {
